style: fix description and languages section alignment styling

--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,12 @@ body {
   color: #d9d9d9;
   padding: 20px;
   height: 100vh;
+}
+
+main {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 header {
@@ -34,6 +38,9 @@ section.game-status {
   flex-direction: column;
   align-items: center;
   color: #f9f4da;
+  width: 100%;
+  max-width: 350px;
+  min-height: 60px;
   border-radius: 4px;
   margin-block: 30px;
 }
@@ -43,7 +50,7 @@ section.game-status.won {
 }
 
 section.game-status.lost {
-  background-color: #f44336;
+  background-color: #ba2a2a;
 }
 
 section.game-status > p {
